--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,8 +7,8 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - href: about.qmd
-        text: About
+      # - href: about.qmd
+      #   text: About
       - href: pres.qmd
         text: Posters & Presentations
       - text: CV
