--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,8 +25,8 @@ format:
   html:
     theme: 
       - stylesheet1.scss
-    mainfont: Montserrat
-    toc: true
+    # mainfont: Montserrat
+    toc: false
     link-external-newwindow: true
 
 # format:
